--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -13,3 +13,12 @@ $max-content-width: {{ site.max_width }};
   "base",
   "distill"
 ;
+
+#register-button
+  width: 50%
+  margin: 20 auto
+  padding: 10
+  font-size: 20
+  font-weight: bold
+  display: block
+  background: darkblue
