Update font awesome

--- a/_includes/social.liquid
+++ b/_includes/social.liquid
@@ -2,7 +2,7 @@
   <a href="mailto:{{ site.email | encode_email }}" title="email"><i class="fa-solid fa-envelope"></i></a>
 {% endif %}
 {%- if site.bluesky_username -%}
-<a href="https://bsky.app/profile/{{ site.bluesky_username }}.bsky.social" title="Bluesky"><i class="fas fa-square"></i></a>
+<a href="https://bsky.app/profile/{{ site.bluesky_username }}.bsky.social" title="Bluesky"><i class="fa-brands fa-bluesky"></i></a>
 {% endif %}
 {%- if site.twitter_username -%}
 <a href="https://twitter.com/{{ site.twitter_username }}" title="Twitter"><i class="fab fa-twitter"></i></a>
