--- a/_includes/people_horizontal.liquid
+++ b/_includes/people_horizontal.liquid
@@ -2,7 +2,7 @@
   <a href="{{ include.url | relative_url }}">  
     <div class="card hoverable">
       <div class="row g-0">        
-        <div class="card-img col-sm-4">
+        <div class="card-img col-md-6">
           {% include figure.html path=include.img alt=include.name %}
         </div>
         <div class="col-sm-6">        
