--- a/_includes/people.liquid
+++ b/_includes/people.liquid
@@ -11,7 +11,7 @@
         %}
       {% endif %}
       <div class="card-body">
-        <h3 class="card-title text-lowercase">{{ include.name }}</h3>
+        <h3 class="card-title">{{ include.name }}</h3>
         <h6 class="card-subtitle mb-2 text-muted">{{ include.affiliation }}</h6>
         <p class="card-text">{{ include.contact }}</p>
       </div>
