--- a/_includes/people.liquid
+++ b/_includes/people.liquid
@@ -13,7 +13,7 @@
       <div class="card-body">
         <h3 class="card-title">{{ include.name }}</h3>
         <h6 class="card-subtitle mb-2 text-muted">{{ include.affiliation }}</h6>
-        <p class="card-text">{{ include.contact }}</p>
+        <p class="card-text text-muted">{{ include.photo_credit }}</p>
       </div>
     </div>
   </a>
