format with prettier

--- a/_includes/selected_papers.html
+++ b/_includes/selected_papers.html
@@ -1,4 +1,1 @@
-
-          <div class="publications">
-            {% bibliography -f {{ site.scholar.bibliography }} -q @*[selected=true]* %}
-          </div>
+<div class="publications">{% bibliography -f {{ site.scholar.bibliography }} -q @*[selected=true]* %}</div>
